# laravel-eks-deployment

./: .gitignore  .gitmodules  CHANGELOG.md  Changelog.md  Dockerfile  Dockerfile-Laravel-10  Dockerfile-Laravel-9  LICENSE  Makefile  README.md  clone.json  docker-compose.yml  dockerhub-build.sh  dockerhub-push.sh  dockerhub-tag.sh  ecr-build.sh  ecr-pull.sh  ecr-push.sh  ecr-tag.sh  get-community.sh  get-official.sh  git-clone.sh  module_community.lst  run-docker.sh
compose/: docker-compose.yml
compose/docker/phpfpm/: Dockerfile  Dockerfile-7.4-pfm  Dockerfile-8.0-fpm  Dockerfile-8.1-fpm  Dockerfile-8.2-fpm  Makefile.am  Makefile.in  docker-build.sh  docker-push.sh  dockerhub-build.sh  dockerhub-push.sh  dockerhub-tag.sh
compose/docker/phpfpm/7.4-apache/: Dockerfile  docker-entrypoint.sh
compose/docker/phpfpm/7.4-fpm/: Dockerfile
compose/docker/phpfpm/8.0-fpm/: Dockerfile
compose/docker/phpfpm/8.1-fpm/: Dockerfile  envsubst.sh
compose/docker/phpfpm/8.2-fpm/: Dockerfile
compose/docker/ubuntu-mariadb/: Dockerfile  Makefile.am  Makefile.in  docker-build.sh  docker-push.sh
compose/docker/ubuntu-mariadb/rootfs/etc/: my.cnf
compose/docker/ubuntu-mariadb/rootfs/scripts/: run.sh
compose/docker/ubuntu-mariadb/rootfs/tmp/: my_set_users.sql  my_show_users.sql
core/: backend.tf.example  igw.tf  main.tf  natgw.tf  output.tf  subnet.tf  variables.tf  vpc.tf
docs/: README-Laravel.md  README-PHPFpm.md  README-Terraform-Infra-Core.md  README-Terraform-Infra-Resources-Budget.md  README-Terraform-Infra-Resources-EKS-Laravel.md  README-Terraform-Infra-TFState.md  (+19 more)
(+286 files in other folders)
